# job-search-assistant

./: .env.example  .gitignore  ANTI_DETECTION_GUIDE.md  README.md  README_IMPLEMENTATION.md  TROUBLESHOOTING.md  main.py  pyproject.toml  requirements.txt  scraper_config_example.py  test_coresignal_api.py  test_crawl_basic.py  test_crawl_proxy.py  test_no_proxy.py  test_playwright.py  test_scraper_crawl4ai.py  test_scraper_enhanced_crawl4ai.py  test_scraper_kameleo.py  verify_scraper_check.py  verify_scraper_interaction.py
docs/: OPENROUTER_KIMI.md  indeed-kameleo-usage.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/companies/: route.ts
frontend/app/api/jobs/: route.ts
frontend/app/companies/: page.tsx
frontend/components/: Header.tsx  JobCard.tsx  SearchBar.tsx
frontend/lib/: db.ts
specs/: crawl4ai-indeed-integration.md  implementation-techniques.md  indeed-kameleo-scraper.md  indeed-pagination-research.md  service-comparison.md  system-design.md
src/: __init__.py
src/database/: __init__.py  models.py  storage.py
src/enrichment/: __init__.py  coresignal.py  enrichment_service.py  people_data_labs.py
src/models/: __init__.py  company.py  job.py
src/scrapers/: __init__.py  base.py  indeed.py  indeed_crawl4ai.py  indeed_kameleo.py  indeed_playwright.py
src/utils/: __init__.py  deduplicator.py  ranker.py
tests/: __init__.py  test_deduplicator.py  test_imports.py  test_indeed_crawl4ai.py  test_indeed_scraper.py  test_models.py  test_ranker.py
(+7 files in other folders)
