[project]
name = "job-search-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.0",
    "beautifulsoup4>=4.14.2",
    "click==8.1.7",
    "crawl4ai>=0.4.0",
    "fake-useragent==1.4.0",
    "httpx==0.25.2",
    "kameleo-local-api-client==4.2.0",
    "loguru==0.7.2",
    "pandas==2.1.4",
    "parsel==1.8.1",
    "playwright==1.49",
    "pydantic==2.10",
    "pydantic-settings==2.1.0",
    "pytest>=7.4.3",
    "pytest-asyncio==0.21.1",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "rich==14.2",
    "seleniumbase==4.44.19",
    "sqlalchemy==2.0.23",
]
